--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">SmsLocationPing</string>
+    <string name="app_name">Sms Location Ping</string>
+    <string name="debug">Debug</string>
     <string name="button_bg_service_turn_on">Turn Background Service On</string>
     <string name="button_bg_service_turn_off">Turn Background Service Off</string>
     <string name="button_bg_service_get_status">Get Background Service Status</string>
