--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 	<string name="button_bg_service_turn_on">Turn Background Service On</string>
 	<string name="button_bg_service_turn_off">Turn Background Service Off</string>
 	<string name="button_bg_service_get_status">Get Background Service Status</string>
+	<string name="testTextView">Testing test view</string>
 </resources>
