--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 	<string name="send_sms">\.\.\.send SMS?</string>
 	<string name="access_coarse_location">\.\.\.access Coarse Location?</string>
 	<string name="access_fine_location">\.\.\.access Fine Location?</string>
+	<string name="access_background_location">\.\.\.access Background Location?</string>
 	<string name="overall_status_unknown">Refresh the status please\.\.\.</string>
 	<string name="overall_status_bad">This won\'t work :(</string>
 	<string name="overall_status_good">Everything seems fine!</string>
