--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
 	<string name="overall_status_unknown">Refresh the status please\.\.\.</string>
 	<string name="overall_status_bad">This won\'t work :(</string>
 	<string name="overall_status_good">Everything seems fine!</string>
+	<string name="request_permission_title">I need %1$s!</string>
+	<string name="request_permission_message">Because I won\'t work without that.</string>
+	<string name="request_permission_ok">Okay!</string>
+	<string name="request_permission_deny">No way!</string>
 </resources>
